package protocol;

enum LoginProtoType {
     C_2_S_LOGIN              = 101;
     S_2_C_LOGIN              = 102;
     C_2_S_RAND_NAME          = 103;
     S_2_C_RAND_NAME          = 104;
     C_2_S_CREATE_ROLE        = 105;
     S_2_C_CREATE_ROLE        = 106;
     C_2_S_LOAD_ROLE_INFO     = 107;
     S_2_C_LOAD_ROLE_INFO     = 108;
     S_2_C_SERVER_TIME        = 110;
}

message C2S_Login {
        optional LoginProtoType type = 1 [default = C_2_S_LOGIN];
        required string login_name = 2;
        required string platform_id = 3;
        required string partition_id = 4;
        required string source = 5;
        required int32 timestamp = 6;
        required int32 fcm = 7;
        required string ticket = 8;
}
message S2C_Login {
        message Role {
                required int64 role_id = 1;
                required int32 level = 2;
                required string name = 3;
                required int32 head = 4;
                optional int32 force_val = 5;
        }
        optional LoginProtoType type = 1 [default = S_2_C_LOGIN];
        required int32 ret = 2;
        repeated Role roles = 3;
}

message C2S_RandName {
        optional LoginProtoType type = 1 [default = C_2_S_RAND_NAME];
        required int32 sex = 2;
}
message S2C_RandName {
        optional LoginProtoType type = 1 [default = S_2_C_RAND_NAME];
        required int32 ret = 2;
        required string name = 3;
}

message C2S_CreateRole {
        optional LoginProtoType type = 1 [default = C_2_S_CREATE_ROLE];
        optional string name = 2;
        optional int32 head = 3;
}
message S2C_CreateRole {
        enum CreateRoleRet {
             st_ok = 0;
             st_role_name_duplicated = 1;
             st_fail_not_enough_info = 2;
        };
        optional LoginProtoType type = 1 [default = S_2_C_CREATE_ROLE];
        required int32 ret = 2;
        required int64 role_id = 3;
}

message C2S_LoadRoleInfo {
        optional LoginProtoType type = 1 [default = C_2_S_LOAD_ROLE_INFO];
        required int64 role_id = 2;
}
message S2C_LoadRoleInfo {
        optional LoginProtoType type = 1 [default = S_2_C_LOAD_ROLE_INFO];
        required int32 ret = 2;
        required int64 role_id = 3;
        required string role_name = 4;
        required int32 level = 5;
        required int32 head = 6;
        required int32 exp = 7;
        required int32 vip_lvl = 8;
        required int32 vip_exp = 9;
        required int32 charge_cash = 10;
        required int32 charge_diamond = 11;
        required int32 diamond = 12;
        required int32 gold = 13;
        required int32 strength = 14;
        required int32 skill_point = 15;
        required int32 train_point = 16;
        required int64 first_log = 17;
        required int64 vip_gift_first_log = 18;
        required int32 trial_vip_level = 19;
        required int32 trial_vip_time = 20;
        required int32 power = 21;
        required int32 morale = 22;
        optional int32 arena_coin = 23;
        optional int32 tower_coin = 24;
        optional int32 crop_coin = 25;
        optional int32 item_coin = 26;
}

message S2C_ServerTime {
        optional LoginProtoType type = 1 [default = S_2_C_SERVER_TIME];
        required int32 time = 2;
}
